# qerds

./: .env.example  .gitignore  .python-version  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.beads/: issues.jsonl
.claude/: README.md
.claude/agents/: coder.md  commiter.md  documenter.md  oracle.md  reviewer.md
.claude/commands/: ai-slop.md
.claude/skills/backend-development/: SKILL.md
.claude/skills/director/: SKILL.md
.claude/skills/frontend-development/: SKILL.md
.claude/skills/security-check/: SKILL.md
docker/: Dockerfile.api  Dockerfile.mocks  docker-compose.test.yml
docker/registry/: README.md
docs/audits/: i18n-audit-2026-01-23.md
docs/compliance/: conformity-assessment.md  etsi-319-522-mapping.md  qualification-guide.md
docs/deployment/: as4-gateway.md  network-security.md  operator-checklist.md  smp-setup.md
docs/identity/: sender-proofing.md
docs/operations/: security-management.md
docs/policies/: business-continuity.md  evidence-management.md  incident-response.md  key-management.md  security-policy.md
docs/runbooks/: backup-dr.md  penetration-testing.md  vulnerability-scanning.md
docs/security/: cryptographic-mechanisms.md
domibus/: README.md
domibus/config/: domibus.properties  logback.xml
domibus/sql/: README.md
mocks/: README.md  app.py
mocks/static/css/: fonts.css  main.css
mocks/static/js/: main.js
mocks/templates/: base.html  verify.html
mocks/templates/partials/: dev_banner.html  status_badge.html
mocks/templates/recipient/: accepted.html
policies/: README.md  continuity-policy.md  evidence-management-policy.md  incident-policy.md  key-management-policy.md  privacy-policy.md  security-policy.md
policies/cps/: 01-introduction.md  02-publication-repository.md  03-identification-authentication.md  04-certificate-lifecycle.md  05-facility-management.md  06-technical-security.md  07-profile.md  08-compliance-audit.md  09-other-matters.md  README.md
scripts/: check-network-security.py  check-traceability.py  check_boundaries.py  setup-domibus.sh
smp/: README.md
smp/config/: application.properties  logback.xml
specs/: requirements.md  traceability.md
specs/implementation/: 00-index.md  05-architecture.md  06-tech-stack.md  10-claims-and-modes.md  20-identities-and-roles.md  25-data-model.md  30-lifecycle-and-evidence.md  35-apis.md  40-evidence-crypto-and-time.md  45-trust-services.md  50-audit-logging-and-immutability.md  60-interop-and-verification.md  65-etsi-interop-profile.md  70-storage-and-retention.md  80-audit-and-conformity.md  90-security-and-ops-controls.md  95-architecture-boundaries.md  99-open-choices.md
src/qerds/: __init__.py
src/qerds/api/: __init__.py  i18n.py  main.py  templates.py
src/qerds/api/middleware/: __init__.py  auth.py  errors.py  request_id.py
src/qerds/api/routers/: __init__.py  admin.py  as4.py  auth.py  consent.py  pages.py  pickup.py  recipient.py  sender.py  trust.py  verify.py
src/qerds/api/schemas/: __init__.py  admin.py  consent.py  recipient.py  sender.py  verify.py
src/qerds/core/: __init__.py  config.py  settings.py
src/qerds/db/: __init__.py
src/qerds/db/migrations/: __init__.py  env.py  script.py.mako
src/qerds/locales/: en.json  fr.json
src/qerds/services/: __init__.py  alerting.py  as4_receiver.py  as4_sender.py  audit_log.py  audit_pack.py  authz.py  conformity_package.py  consent.py  content_encryption.py  dispute.py  dr_evidence.py  email.py  encryption.py  evidence.py  evidence_sealer.py  job_queue.py  lifecycle.py  oidc.py  ops_events.py  pdf.py  pickup.py  qualification.py  qualified_mode.py  retention.py  security_controls.py  security_events.py  session.py  smp_client.py  storage.py  trust.py  vulnerability_evidence.py
src/qerds/templates/: base.html  login.html  verify.html
src/qerds/trust/: __init__.py  main.py
src/qerds/worker/: __init__.py  __main__.py  main.py  scheduler.py
tests/: __init__.py  conftest.py  factories.py  test_acceptance_pdf.py  test_admin_api.py  test_alerting.py  test_api.py  test_as4_receiver.py  test_as4_sender.py  test_audit_log.py  test_audit_pack_service.py  test_authz.py  test_backend_enforcement.py  test_config.py  test_conformity_package.py  test_consent.py  test_content_encryption.py  test_crypto.py  test_delivery_lifecycle_unit.py  test_deposit_pdf.py  test_dispute_service.py  test_dr_evidence.py  test_e2e_lre_flow.py  test_email.py  test_encryption.py  test_evidence.py  test_evidence_sealer.py  test_i18n.py  test_identity_proofing.py  test_job_queue.py  test_lifecycle.py  test_login_views.py  test_negligence_pdf.py  test_oidc.py  test_ops_events.py  test_pdf.py  test_pickup_flow.py  test_pickup_views.py  test_qualification.py  test_qualified_mode.py  (+25 more)
tests/integration/: __init__.py  conftest.py  test_hsm_failclosed.py  test_proof_access.py
(+47 files in other folders)
