[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qerds"
version = "0.1.0"
description = "Qualified Electronic Registered Delivery Service"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "QERDS Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

dependencies = [
    # Web framework
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    "jinja2==3.1.6",
    # Database
    "psycopg[binary,pool]==3.3.2",
    "sqlalchemy==2.0.46",
    "alembic==1.18.1",
    # Configuration
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    # Cryptography (well-audited library for signatures, hashing, X.509)
    "cryptography==46.0.3",
    # PDF generation for evidence bundles
    "weasyprint==68.0",
    # OIDC/OAuth2 for FranceConnect+ integration
    "authlib==1.6.6",
    "httpx==0.28.1",
    # S3-compatible storage (MinIO in dev)
    "boto3==1.42.32",
    # Email validation for Pydantic
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "ruff==0.14.13",
    "mypy==1.19.1",
    # S3 mocking for unit tests
    "moto[s3]==5.1.20",
    # Type stubs
    "boto3-stubs[s3]==1.42.32",
    "types-jinja2==2.11.9",
]

[project.scripts]
qerds-api = "qerds.api.main:run"
qerds-worker = "qerds.worker.main:run"
qerds-trust = "qerds.trust.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/qerds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/qerds"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 0  # Will increase as we add tests (target: 80)
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "LOG",    # flake8-logging
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "D",      # Don't require docstrings in tests
    "ANN",    # Don't require type annotations in tests
    "ARG",    # Allow unused arguments in tests (fixtures)
]
"src/qerds/**/__init__.py" = [
    "D104",   # Package docstrings optional
]
"src/qerds/api/schemas/**/*.py" = [
    "TCH003", # Pydantic models need runtime access to stdlib types
]
"src/qerds/api/routers/**/*.py" = [
    "TCH003", # FastAPI routes need runtime access to stdlib types for path params
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["qerds"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "weasyprint.*",
    "authlib.*",
]
ignore_missing_imports = true
